fix: fixed web app authorization
